syntax = "proto3";

package proto;

// 客户端到服务器发送消息的类型
enum ReceiveMessageType {
    StartID = 0;
    DoBet = 1; // 下注信息
    GetUserList = 2; //获取玩家列表
	GetTrendHistory = 3 ;// 获取中奖历史
	DoTest = 4 ;// 测试专用
	RoundEnd = 5;// 转圈结束
	BetReptReq = 6;// 重复下注
}

// 服务器发送给客户端的消息类型
enum SendToClientMessageType {
    RestartID = 0;
    BetRet = 1; // 下注成功消息
    BetFailID = 2; // 下注失败
	Status = 3;		//状态消息
	Settle = 4;		//结算消息
	UserList = 5;//玩家列表
	RoomSence = 6;	//场次场景信息
    UserComeBack = 7;	//用户回来的结算消息
	TrendRet = 8; // 中奖历史消息
	TopUserList = 9 ;// 上榜的6位玩家输赢情况
	UserNum =10  ; // 用户数量消息
	LoopBetNotice = 11; // 循环下注通知
	BetReptResp = 12;// 重复下注通知自己
	GoldNowNotice = 13;// 当前金额通知
	BetReptRespNotice = 14;// 重复下注广播
}

//游戏阶段
enum GameStatus{
	StartStatus = 0;
	StartMovie = 1;//开始动画 
	BetStatus = 2; //下注阶段
	EndBetMovie = 3; //结束下注动画
	SettleStatus = 4; //结算阶段
}


message StatusMessage{
	int32 Status = 1;		//状态
	int32 StatusTime = 2;	//状态的持续时间
}

message BetFailMsg{
	string BetFailInfo = 1;	//下注失败原因
	bool IsKickOut = 2;// 是否剔除玩家
}

// 下注客户端传服务端参数
message UserBet{
	int64 UserID = 1;// 玩家ID
	int32 BetType = 2;	//下注区的索引
	int32 BetIndex = 3;	//筹码区的索引
}


//结算消息
message SettleMsg{
    UserSettleInfo Self = 1;// 自己输赢信息
    repeated int32 ShakeResult = 2 ; //  摇中的结果（可能包含大四喜+车型） 
	repeated UserSettleInfo Head = 3;// 前3名信息
	int64 GoldNow = 5 ; // 玩家当前的金币
}


// 玩家结算消息
message UserSettleInfo{
	int64 UserID = 1;// 玩家ID
	string Avatar = 2 ;// 玩家头像
	string NickName = 3 ; // 玩家昵称
	int64 WinGold = 4 ; // 玩家赢的金币 // 以此排序
}

// 玩家列表请求参数
message UserListReq{
	int32 PageIndex = 1; // 当前页
}

// 玩家列表响应参数
message UserListResp{
	repeated UserInfo UserList = 1;
}


// 区域下注
message sceneAllBets {
    int64 allGold = 1; // 区域总下注值
    int64 userID = 2;// 
    int64 userGold = 3;// 自己下注
} 
// 场次场景信息（1次/s）
message RoomSceneInfo {
	repeated int64 bets = 1;// 筹码区
	int64 gold = 2; // 玩家金币
	int32 onlineCount = 3; //玩家列表个数（总个数） 
	repeated SceneMyBet myBets = 4;// 我的下注 
	repeated  SettleTopUserInfo TopUsers = 5;
	repeated int32 Trend = 6; // 历史记录
	repeated int32 Odds = 7;// 下注区的倍率
}

message SceneMyBet{
	int64 allGold = 1; // 区域总下注值
    int64 userID = 2;// 
    int64 userGold = 3;// 自己下注
}



//玩家列表信息
message UserInfo{
    int64 ID = 1;
	string NickName = 2;
	int64 Gold = 3; // 当前金币
	int64 WinGold = 4 ;// 获胜总金币（近20局）// 以此排序
	int64 WinTimes = 5; // 赢得局数（近20局）
	string Avatar = 6; // 玩家头像
}

message TrendMsg{
    repeated int32 Trend = 1;// 房间的中奖历史
}



// 6个上榜人员信息（每局结算之后计算该消息）
message SettleTopUser {
	repeated  SettleTopUserInfo List = 1;
}
message SettleTopUserInfo{  
	int64 UserID = 1;// 玩家id
	int64 WinGold = 2;//玩家赢的金币
	int64 TakeGold = 3;// 玩家携带金币
	string Avatar= 4 ;// 玩家头像
	string NickName = 5;// 玩家昵称
	bool IsBigWinner = 6 ;// 是否是大赢家
}


message UserNumMsg {
	int32 Num = 1 ; // 玩家数量
}


// 循环播放下注通知
message LoopBetNoticeMsg{
	repeated int64 BetGold = 1;
}

message BetRetMsg{
	bool IsSuccess = 1;
}

// 转圈结束
message RoundEndMsg {
}


// 客户端发送的测试结果
message TestIn{
	int32 OutID = 1 ;
}

// 重复下注
message BetReptMsg {
	repeated int64 BetGold = 1;
}


message GoldNowMsg{
	int64 UserID = 1;
	int64 GoldNow = 2;
}


message BetReptRespNoticeMsg{
	int64 UserID = 1;
	repeated int64 BetGold = 2;
}